Destructuring variable declaration is missing a validation of the syntax of a sub production when there is a rhs https://bugs.webkit.org/show_bug.cgi?id=159267

Reviewed by Mark Lam.

Source/JavaScriptCore:

We were parsing something without checking if it had a syntax error.
This is wrong for many reasons, but it could actually cause a crash
in a debug build if you parsed particular programs.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseVariableDeclarationList):

LayoutTests:

* js/parser-syntax-check-expected.txt:
* js/script-tests/parser-syntax-check.js:


Canonical link: https://commits.webkit.org/177392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202648 268f45cc-cd09-0410-ab3c-d52691b4dbfc